# NavigationPlatform/NavigationPlatform.Server/DB/NavigationPlatformContext.cs
@@ -7,6 +7,8 @@ namespace NavigationPlatform.Server.DB
     {
         public DbSet<GraphNode> GraphNodes { get; set; }
         public DbSet<GraphEdge> GraphEdges { get; set; }
+        public DbSet<HeatpointArea> HeatpointAreas { get; set; }
+        public DbSet<Floor> Floors { get; set; }
         public NavigationPlatformContext(DbContextOptions<NavigationPlatformContext> options)
             : base(options)
         {
