# NavigationPlatform/NavigationPlatform.Server/Models/HeatpointArea.cs
@@ -1,0 +1,26 @@
+using Microsoft.EntityFrameworkCore;
+using NavigationPlatform.Server.Models.EntityConfig;
+
+namespace NavigationPlatform.Server.Models
+{
+    [EntityTypeConfiguration(typeof(HeatpointAreaConfig))]
+    public class HeatpointArea
+    {
+        public int Id { get; set; }
+        public double X { get; set; }
+        public double Y { get; set; }
+        public int Value { get; set; }
+        public int SoundLevel { get; set; }
+        public int Level { get; set; }
+        public Guid FloorId { get; set; }
+        public Floor Floor { get; set; } = null!;
+        public int Width { get; set; }
+        public int Height { get; set; }
+        public string Color => Value switch
+        {
+            <= 3 => "green",
+            <= 10 => "yellow",
+            _ => "red"
+        };
+    }
+}
